touched up some minor issues, such as a margin for the newsletter button. Improved the responsiveness of the footer for index.html on ipad. fixed the about me info as it was too close to the side. Made the navbar title the link to the home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,31 @@
 @import url('https://fonts.googleapis.com/css?family=Krona+One|Oswald:200,300,400,500,600,700|Playfair+Display&display=swap');
 
+* {
+ box-sizing: border-box;
+}
+*:before,
+*:after {
+ box-sizing: border-box;
+}
+html,
+body {
+ height: 100%;
+ position: relative;
+}
+.main-container {
+ min-height: 100vh; /* will cover the 100% of viewport */
+ overflow: hidden;
+ display: block;
+ position: relative;
+ padding-bottom: 100px; /* height of your footer */
+}
+#index-footer {
+ position: absolute;
+ bottom: 0;
+ width: 100%;
+}
+
+
    /* ---------------------- Backgrounds */
 body {
     background-color: #000;
@@ -86,19 +112,19 @@ body {
 
 
 .about-me-info {
-    padding: 30px 0 60px;
-        border-bottom: 2px solid white;
+    padding: 30px 5px 60px;
+    border-bottom: 2px solid white;
 }
 
 .about-me-info p {
     color: white;
     font-size: 20px;
-    text-align: left;
+    text-align: center;
     text-shadow: 5px 3px 3px #000;
 }
 
 .about-me-info p span {
-    font-size: 28px ;
+    font-size: 24px ;
     color: yellow;
     text-shadow: 5px 3px 3px #000;
 }        
@@ -452,6 +478,10 @@ a.btn-card {
   text-decoration: none;
 }
 
+.subscribe-form button {
+    padding-top: 10px;
+}
+
 #contact button#submit a {
     color: #fff;
     text-decoration: none;
@@ -524,6 +554,10 @@ background-image: linear-gradient(to top, #000000 0%, grey 100%);
 }
 .mb-15 {
     margin-bottom: 15px;
+}
+
+.subscribe-form button{
+    margin-top: 10px;
 }
 
 .subscribe2-wrapper .subscribe-form input { /* SUB FORM */
